# nonogram-rs

./: ALGORITHM.md  Cargo.toml  README.md
benches/: bench.rs
doc/: Algorithm.md
res/: apple-color.json  apple.json  colors.json  flower.json  palm-color.json  palm-tree.json  palm.json  teal.json
src/: algo.rs  cancel.rs  import.rs  json.rs  layout.rs  lib.rs  line.rs  nonogram.rs  serialize.rs
src/algo/: chain.rs  collection.rs  flag.rs  grid.rs  line.rs  mod.rs
src/import/: mod.rs  teal.rs
tests/: apple.json  bench.rs  demo.rs  lib.rs  res.rs
