[package]
name = "nonogram-rs"
description = "A fast and lightweight nonogram solving library."
authors = ["Rico Riedel <rico.riedel@protonmail.ch>"]
version = "2.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ricoriedel/nonogram-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
crossterm = { version = "0.23", optional = true }
clap = { version = "3.1", features = ["derive"], optional = true }

[[bin]]
name = "nonosolver"
required-features = ["serde", "serde_json", "crossterm", "clap"]