[package]
name = "nonogram-rs"
description = "A fast and lightweight nonogram solving library."
authors = ["Rico Riedel <rico.riedel@protonmail.ch>"]
version = "2.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ricoriedel/nonogram-rs"
keywords = ["nonogram", "puzzle", "solver"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
crossterm = { version = "0.25", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[[bin]]
name = "nonogram-cli"
path = "src/bin/nonogram_cli.rs"
required-features = ["serde", "serde_json", "crossterm", "clap"]