[package]
name = "nonogram-rs"
description = "A fast and lightweight nonogram solving library."
authors = ["Rico Riedel <rico.riedel@protonmail.ch>"]
version = "2.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ricoriedel/nonogram-rs"
keywords = ["nonogram", "puzzle", "solver"]

[dependencies]
rayon = "1.6"
serde = { version = "1.0", features = ["derive"], optional = true }

serde_json = { version = "1.0", optional = true }
crossterm = { version = "0.25", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
criterion = "0.4"

[features]
cli = ["dep:serde_json", "dep:crossterm", "dep:clap", "serde"]

[[bin]]
name = "nonogram-cli"
path = "src/bin/nonogram_cli.rs"
required-features = ["cli"]

[[bench]]
name = "bench"
harness = false
required-features = ["serde"]